@@ -2,6 +2,7 @@
  - Fix bug in cofactor: now it is transposed the correct way.
  - Add cell.min_facet_edge_length
  - Add cell.max_facet_edge_length
+ - Simplify 0^f -> 0 if f is a non-negative scalar value 
 1.2.0 [2013-03-24]
  - NB! Using shapes such as (1,) and (1,1) instead of () for 1D tensor quantities I, x, grad(f)
  - Add cell.facet_diameter
